karl package Changelog
======================

Unreleased
----------

- Allow embedded objects in intranets feature HTML. (LP #677497)

- Don't allow unicode value of ``max_age`` to propagate into cookies emitted
  on successful login (LP #674123).

- Fixed dump of peopledir sections without any ``__acl__`` (LP #672744).


3.50 (2010-11-08)
-----------------

- Added basic logging configuration to console scripts. (LP #670610)

- Fixed bug which caused content feeds to break if an edited item was not
  contained by a community. (LP #670967)

- Add a peopledirectory report filter based on the 'is_staff' index.
  and configure it as an addable in a report.  (LP #669523)

- Make the jQuery UI dialog on Accept Invitation show an OK button
  that isn't misaligned.  We have some pretty horrible CSS styling
  going on where we have overridden <button> as a whole, rather than
  in targeted places.  We have a buttongeddon coming at some
  point. (LP #651279)

- The same code is used to guess mimetypes for files uploaded to the
  files tool is now used to guess mimetypes for files uploaded as
  attachments to other content types, ie blog entries, wiki pages, et
  al.  (LP #667494)

- Added an evolve script to update mimetypes for community files with
  generic, meaningless mimetypes to something more specific based on
  file extension.  (LP #667494)

- Attendees are now converted to to UTF-8 in the ical view for calendar events.
  (LP #666295)

3.49 (2010-11-02)
-----------------

- Harden 'deactivate_profile.html' view against missing user (LP #669451).

- Fix 'show_profile_view' for case when user has never logged in.  (LP
  #668352)

- Suppressed "Admin" action on peopledir objects (LP #668489).

- Added evolve script to clean up logins in user database.

- Make "external" action URL detection work for HTTPS URLs (LP #661381).

- Update feed code to read unicode from config file.  (LP #663403)

- Repaired busted HTML in template used to view profile.  (LP #668350)
